[package]
name = "kube-test"
description = "Testing utilities for kube"
version = "0.57.0"
authors = ["kazk <kazk.dev@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/clux/kube-rs"
readme = "../README.md"
keywords = ["kubernetes", "kube", "test"]
categories = ["testing"]

[dependencies]
kube = { path = "../kube", version = "^0.57.0", default-features = false, features = ["client"] }
futures = "0.3.8"
tokio = { version = "1.0.1", features = ["time"] }
serde = "1.0.118"
serde_yaml = "0.8.17"
thiserror = "1.0.23"
tracing = { version = "0.1.25", features = ["log"] }
xid = "1.0.0"

[dependencies.k8s-openapi]
version = "0.12.0"
default-features = false
features = []

[dev-dependencies.k8s-openapi]
version = "0.12.0"
default-features = false
features = ["v1_20"]
