[package]
name = "kube"
description = "Kubernetes client and async controller runtime"
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords = ["kubernetes", "client", "runtime", "cncf"]
categories = ["network-programming", "caching", "api-bindings", "encoding"]

[features]
default = ["client", "rustls-tls", "ring"]
#! See [kube.rs/features](https://kube.rs/features/) for more details

## default client
client = ["kube-client/client", "config"]
## default config
config = ["kube-client/config"]
## default tls stack
rustls-tls = ["kube-client/rustls-tls", "client"]

## legacy tls stack (must disable rustls-tls to use)
openssl-tls = ["kube-client/openssl-tls", "client"]
## aws rustls provider
aws-lc-rs = ["kube-client?/aws-lc-rs"]
## ring rustls provider
ring = ["kube-client?/ring"]
## enable webpki roots in rustls
webpki-roots = ["kube-client/webpki-roots", "client"]

## enable kube-derive and proc macros
derive = ["kube-derive", "kube-core/schema"]
## enable runtime for controllers/watchers/reflectors
runtime = ["kube-runtime"]
## enable websocket client support for portforward/exec/attach
ws = ["kube-client/ws", "kube-core/ws"]
## enable client oauth support
oauth = ["kube-client/oauth", "client"]
## enable client oidc support
oidc = ["kube-client/oidc", "client"]
## enable client socks5 support
socks5 = ["kube-client/socks5", "client"]
## enable client http proxy support
http-proxy = ["kube-client/http-proxy", "client"]
## enable client gzip usage
gzip = ["kube-client/gzip", "client"]
## enable support for jsonpatch style patch parameters
jsonpatch = ["kube-core/jsonpatch"]
## enable the admission module
admission = ["kube-core/admission"]
## enable unstable runtime features
unstable-runtime = ["kube-runtime/unstable-runtime", "runtime"]
## enable unstable client features
unstable-client = ["kube-client/unstable-client", "client"]
## enable the kubelet debug interface
kubelet-debug = ["kube-client/kubelet-debug", "kube-core/kubelet-debug"]

[package.metadata.docs.rs]
features = ["client", "rustls-tls", "openssl-tls", "derive", "ws", "oauth", "jsonpatch", "admission", "runtime", "k8s-openapi/latest", "unstable-runtime", "socks5", "http-proxy"]
# Define the configuration attribute `docsrs`. Used to enable `doc_cfg` feature.
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
kube-derive = { path = "../kube-derive", version = "=2.0.1", optional = true }
kube-core = { path = "../kube-core", version = "=2.0.1" }
kube-client = { path = "../kube-client", version = "=2.0.1", default-features = false, optional = true }
kube-runtime = { path = "../kube-runtime", version = "=2.0.1", optional = true}
# Not used directly, but required by resolver 2.0 to ensure that the k8s-openapi dependency
# is considered part of the "deps" graph rather than just the "dev-deps" graph
k8s-openapi.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
schemars.workspace = true
http.workspace = true
tower-test.workspace = true
anyhow.workspace = true
k8s-openapi = { workspace = true, features = ["latest"] }
