[package]
name = "tests"
version = "0.1.0"
authors = ["clux <sszynrae@gmail.com>"]
publish = false
edition = "2018"
license = "Apache-2.0"

[package.metadata.release]
disable-release = true

[[bin]]
name = "dapp"
path = "dapp.rs"

[dependencies]
anyhow = "1.0.37"
env_logger = "0.8.2"
futures = "0.3.8"
kube = { path = "../kube", version = "^0.58.1", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.13.0", features = ["v1_20"], default-features = false }
log = "0.4.11"
serde_json = "1.0.61"
tokio = { version = "1.0.1", features = ["full"] }
