[package]
name = "tests"
version = "0.1.0"
authors = ["clux <sszynrae@gmail.com>"]
publish = false
edition = "2018"
license = "Apache-2.0"

[package.metadata.release]
release = false

[[bin]]
name = "dapp"
path = "dapp.rs"

[dependencies]
anyhow = "1.0.44"
env_logger = "0.9.0"
futures = "0.3.17"
kube = { path = "../kube", version = "^0.60.0", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.13.1", features = ["v1_22"], default-features = false }
log = "0.4.11"
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
